changing the name of the 'silence' flag to 'quiet'

--- a/README
+++ b/README
@@ -2,15 +2,15 @@
 
 `nag` is a small utility that will take in an amount of time in minutes and/or
 seconds, and an optional message.  When the time elapsed, it will print the
-message to the screen.  If you're running a Mac, and didn't pass the Silent
-flag (-s, --silent), it will use the `say` command to speak your message.
+message to the screen.  If you're running a Mac, and didn't pass the Quiet
+flag (-q, --quiet), it will use the `say` command to speak your message.
 
 The defaults are:
 
 * Wait time in Minutes: 0
 * Wait time in Seconds: 0
 * Message: "HEY!"
-* Silent: false
+* Quiet: false
 
 If you call `nag` without any parameters, it will wait 0 minutes and 0 seconds,
 and then print "HEY!" to STDOUT.
