--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 `nag` is a small utility that will take in an amount of time in minutes and/or
 seconds, and an optional message.  When the time elapsed, it will print the
 message to the screen.  If you're running a Mac, and didn't pass the Quiet
-flag (-q, --quiet), it will use the `say` command to speak your message.
+flag (-q, --quiet), it will also use the `say` command to speak your message.
 
 The defaults are:
 
